# Wonder-of-U

./: .gitignore  LICENSE  README.md  index.html  logs.md  overlay.html  package-lock.json  package.json  todo.md  vite.config.ts
docs/: ROADMAP.md
src/: App.tsx  constants.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  indicator.json
src-tauri/scripts/: translation_bridge.py  translation_requirements.txt
src-tauri/src/: anki.rs  app_config.rs  app_runtime.rs  app_setup.rs  app_state.rs  app_types.rs  asset_downloads.rs  commands.rs  desktop_shell.rs  lib.rs  main.rs  recording.rs  recording_indicator.rs  recording_library.rs  recording_session.rs  runtime_assets.rs  settings.rs  sherpa.rs  tokenizer.rs  transcription.rs  translation.rs  translation_bridge.rs
src-tauri/src/anki/: catalog.rs  client.rs  fields.rs  furigana.rs  furigana_update.rs  known_words.rs  mine.rs  model.rs  push.rs  references.rs
src-tauri/src/app_state/: history.rs  persistence.rs
src-tauri/src/asset_downloads/: control.rs  dictionary.rs  ffmpeg.rs  model.rs  runtime.rs  transfer.rs  ytdlp.rs
src-tauri/src/recording_library/: actions.rs  conversion.rs  import.rs  texts.rs  transcription.rs
src-tauri/src/recording_session/: finalize.rs
src-tauri/src/runtime_assets/: dictionary.rs  ffmpeg.rs  path_probe.rs  updates.rs  whisper.rs  ytdlp.rs
src/components/audio/: NowPlayingBar.tsx
src/components/home/: HomePage.tsx
src/components/layout/: PageSidebar.tsx
src/components/recorder/: RecorderPage.tsx  RecordingLevelMeter.tsx
src/components/recordings/: RecordingCard.tsx  RecordingFilterTabs.tsx  SavedRecordingsPage.tsx  SavedRecordingsToolbar.tsx  SelectionActionBar.tsx  TranscriptionQueuePanel.tsx
src/components/settings/: AnkiFieldSelect.tsx  AnkiMappingSettingsPage.tsx  DownloadProgressCard.tsx  KnownWordsSettingsPage.tsx  ModelSettingsPage.tsx  PreferencesSettingsPage.tsx  RuntimeSettingsPage.tsx  SettingsPages.tsx  SetupChecklist.tsx  StorageSettingsPage.tsx  TranslationSettingsPage.tsx  WhisperStatusSettingsPage.tsx  settingsTypes.ts
src/components/transcripts/: TranscriptLanguageTabs.tsx  TranscriptReadingPane.tsx  TranscriptSegmentRow.tsx  TranscriptViewerPage.tsx  transcriptText.tsx
src/components/ui/: BusyOverlay.tsx  ConfirmDialog.tsx  ConfirmDialogProvider.tsx  ThemedSelect.tsx  Tooltip.tsx  UpdateResultCard.tsx
src/hooks/: useAnkiCatalog.ts  useAppBootstrap.ts  useAppViewState.ts  useAudioPlayer.ts  useFileDrop.ts  useKnownWords.ts  useRecorderActions.ts  useRecordingActions.ts  useRecordingLevel.ts  useRecordingLibrary.ts  useRecordingTexts.ts  useSetupActions.ts  useTranscriptionProgress.ts  useTranscriptionQueue.ts  useYoutubeQueue.ts
src/lib/: errors.ts  format.ts  helpers.ts  navigation.ts  recordingBatchMessages.ts
src/overlay/: main.ts
