[package]
name = "wonder_of_u_desktop"
version = "0.1.0"
description = "Wonder of U desktop application"
authors = ["Surkhab Singh"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wonder_of_u_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5.1"
wasapi = "0.23.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tiny_http = "0.12"
# Default features are `mmap` only — no dictionary is embedded. Enabling
# `embed-ipadic` would bake ~50MB of IPADIC into the binary and tax every user
# for an optional feature; we load a prebuilt dictionary from a path at runtime.
lindera = "4"
# NFKC for the known-word index, which has to fold ＡＢＣ onto ABC and half-width
# katakana onto full-width before either side of a comparison is trustworthy. Not
# a new cost: lindera already depends on this exact crate, so it is compiled into
# the binary either way — this only makes the dependency visible to us as well.
unicode-normalization = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
