[package]
name = "wonder_of_u_desktop"
version = "0.1.0"
description = "Wonder of U desktop application"
authors = ["Surkhab Singh"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wonder_of_u_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5.1"
wasapi = "0.23.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "multipart"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tiny_http = "0.12"
# Frame-synchronous ASR (Silero VAD + Whisper ONNX) for drift-free, language-agnostic
# transcription. `shared` (not the default `static`): the prebuilt static lib needs a
# newer MSVC STL than the local toolchain provides, so we link the DLLs instead — the
# build script copies onnxruntime.dll + sherpa-onnx-c-api.dll into target, and they are
# bundled next to the exe (see tauri.conf.json bundle.resources).
sherpa-onnx = { version = "1", default-features = false, features = ["shared"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
